# hello-mcp

./: .gitignore  LICENSE  README.md  README_ZH.md  config.example.yaml  pyproject.toml
hello_mcp/: __init__.py  client.py  client2sse.py  client2stdio.py  server.py
